some tweaks to camera permissions and devices

--- a/styles/src/master.css
+++ b/styles/src/master.css
@@ -26,3 +26,9 @@ video.camera {
   width: 40rem;
   height: 30rem;
 }
+
+select.video-selection,
+select.audio-selection {
+  background: transparent;
+  color: var(--on-surface-1);
+}
